--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
 	<div class="container">
-		<div class="menu"></div>
+		<div class="menu">
+			<ul>
+				<a href=""><li>Home</li></a>
+				<a href=""><li>Homework</li></a>
+				<a href=""><li>Setting</li></a>
+			</ul>
+		</div>
 	</div>
 </body>
 </html>
