--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 	<div class="container">
 		<div class="menu">
 			<ul>
-				<a href=""><li>Home</li></a>
-				<a href=""><li>Homework</li></a>
-				<a href=""><li>Setting</li></a>
+				<a href="#"><li>Home</li></a>
+				<a href="#"><li>Homework</li></a>
+				<a href="#"><li>Setting</li></a>
 			</ul>
+			<a href="#"><img src="img/av_64.png" alt=""></a>
 		</div>
 	</div>
 </body>
