--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
 			</ul>
 			<a href="#"><img src="img/av_64.png" alt=""></a>
 		</div>
+		<h1>Setting</h1>
+		<div class="block">
+			<div class="b1"><p>AVATAR</p>
+				<p>STUDENTS INFO</p>
+				<p>CHANGE PASSWORD</p>
+			</div>
+			<div class="b2">
+				<img src="img/av_256.png" alt="">
+				<form action="">
+					<button type="submit">Choose photo</button>
+				</form>
+			</div>
+			<div class="b3"></div>
+			<div class="b4"></div>
+		</div>
 	</div>
 </body>
 </html>
